tests/paczka1/small_fuzzy/27617456.err
Error in line 1: CR7NB S653 63,6
Error in line 8: 8lGF S653 89,0
